[build-system]
requires = ["setuptools>=66.0.0", "wheel"] # >=64 for PEP660 support
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "sandpit"
authors = [
    {name = "semuadmin", email = "semuadmin@semuconsulting.com"},
]
maintainers = [
  {name = "semuadmin", email = "semuadmin@semuconsulting.com"}
]
description = "Sandpit development, test and build environment"
version = "0.0.4"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Installation/Setup",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

dependencies = [

]

[project.urls]
homepage = "https://github.com/semuadmin/sandpit"
documentation = "https://github.com/semuadmin/sandpit"
repository = "https://github.com/semuadmin/sandpit"
changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"

[project.optional-dependencies]
# deploy = [
#     "build >= 0.1",
#     "pip >= 23.0",
#     "setuptools >= 66.0",
#     "wheel >= 0.40"
# ]
# test = [
#     "bandit >= 1.7",
#     "black >= 23.1",
#     "pylint >= 2.17",
#     "pytest >= 7.2",
#     "pytest-cov >= 4.0",
#     "Sphinx >= 5.3",
#     "sphinx-rtd-theme >= 1.2",
# ]
proxy = [
    "PySocks>=1.7",
]
deploy = [
    "build >= 0.10",
    "pip >= 23.0",
    "setuptools >= 64.0",
    "wheel >= 0.40",
]
test = [
    'bandit >= 1.7',
    'black >= 23.0',
    'codespell >= 2.2',
    'flake8',
    'isort >= 5.12',
    'mock >= 5.0',
    'mypy >= 1.2',
    'ptr >= 22.0',
    'pylama >= 8.4',
    'pytest >= 7.0',
    'pytest-runner >= 6.0',
    'safety >= 2.3',
    'six >= 1.16',
    'tox >= 4.4',
]

[tool.bandit]
exclude_dirs = ["docs", "examples", "tests"]
skips = []

[tool.pylint]
jobs = 0
reports = "y"
py-version = "3.7"
#exit-zero = "y"
fail-under = "9.8"
fail-on = "E,F"
clear-cache-post-run = "y"
good-names="i,j,x,y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing --cov-fail-under 95"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
