[build-system]
requires = ["setuptools>=75.0.0", "wheel"]         # >=64 for PEP660 support
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "sandpit"
dynamic = ["version"]
authors = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
maintainers = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
description = "Sandpit development, test and build environment"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.scripts]
calculate = "sandpit.calculate_cli:main"

[project.urls]
homepage = "https://github.com/semuadmin/sandpit"
documentation = "https://github.com/semuadmin/sandpit"
repository = "https://github.com/semuadmin/sandpit"
changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"

[dependency-groups]
build = [
    "build",
    "packaging>=24.2",
    "pip",
    "setuptools >= 75.0",
    "twine>=6.1.0",
    "wheel",
]
test = [
    "bandit>=3.3",
    "black>=1.8",
    "pytest>=8.4",
    "pytest-cov",
    "isort>=6.0",
    "pylint>=25.0",
    "Sphinx>8.2",
    "sphinx-rtd-theme",
]
deploy = [{ include-group = "build" }, { include-group = "test" }]

[tool.setuptools.dynamic]
version = { attr = "sandpit._version.__version__" }

[tool.black]
target-version = ['py39']

[tool.isort]
py_version = 39
profile = "black"

[tool.bandit]
exclude_dirs = ["docs", "examples", "tests", ".venv"]
skips = []

[tool.pylint]
jobs = 0
reports = "y"
recursive = "y"
py-version = "3.9"
fail-under = "9.8"
fail-on = "E,F"
clear-cache-post-run = "y"
good-names = "i,j,x,y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
"""

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "--cov --cov-report html --cov-fail-under 50"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
fail_under = 50

[tool.coverage.html]
directory = "htmlcov"
